--- a/.github/workflows/project-automation.yml
+++ b/.github/workflows/project-automation.yml
@@ -2,9 +2,9 @@ name: Project Management Automation
 
 on:
   issues:
-    types: [opened, labeled, assigned, closed]
+    types: [opened, closed]
   pull_request:
-    types: [opened, labeled, assigned, closed, ready_for_review]
+    types: [opened, closed, ready_for_review]
 
 jobs:
   # Автоматически добавляет новые задачи в проект
@@ -19,59 +19,49 @@ jobs:
           column-name: 'To Do'
           github-token: ${{ secrets.PROJECT_PAT }}
 
-  # Автоматически перемещает задачи при изменении статуса
-  move-on-status-change:
+  # Простые Telegram уведомления
+  telegram-simple:
     runs-on: ubuntu-latest
     steps:
-      - name: Move to In Progress when assigned
-        uses: actions/add-to-project@v0.5.0
-        if: |
-          github.event_name == 'issues' && 
-          github.event.action == 'assigned'
-        with:
-          project-url: https://github.com/orgs/RPO-Project-2025/projects/3
-          column-name: 'In Progress'
-          github-token: ${{ secrets.PROJECT_PAT }}
+      - name: Send Telegram notification
+        env:
+          EVENT_TYPE: "${{ github.event_name }}"
+          ACTION_TYPE: "${{ github.event.action }}"
+        run: |
+          # Формируем базовое сообщение
+          MESSAGE="🎯 *RPO Project*%0A%0A"
           
-      - name: Move to Review when PR is ready
-        uses: actions/add-to-project@v0.5.0
-        if: |
-          github.event_name == 'pull_request' && 
-          github.event.action == 'ready_for_review'
-        with:
-          project-url: https://github.com/orgs/RPO-Project-2025/projects/3
-          column-name: 'Review'
-          github-token: ${{ secrets.PROJECT_PAT }}
-
-      - name: Move to Done when closed
-        uses: actions/add-to-project@v0.5.0
-        if: |
-          (github.event_name == 'issues' || github.event_name == 'pull_request') && 
-          github.event.action == 'closed'
-        with:
-          project-url: https://github.com/orgs/RPO-Project-2025/projects/3
-          column-name: 'Done'
-          github-token: ${{ secrets.PROJECT_PAT }}
-
-  # Уведомление в Telegram о важных событиях
-  telegram-notification:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Send notification to Telegram
-        uses: appleboy/telegram-action@master
-        with:
-          to: ${{ secrets.TELEGRAM_CHAT_ID }}
-          token: ${{ secrets.TELEGRAM_BOT_TOKEN }}
-          message: |
-            🎯 *${{ github.repository }}*
-            
-            ${{ github.event_name == 'issues' && github.event.action == 'opened' && format('📝 *Новая задача*: {0}\n👤 *Автор*: {1}\n🔗 *Ссылка*: {2}\n🏷️ *Метки*: {3}', github.event.issue.title, github.event.issue.user.login, github.event.issue.html_url, join(github.event.issue.labels.*.name, ', ')) || '' }}
-            
-            ${{ github.event_name == 'issues' && github.event.action == 'closed' && format('✅ *Задача закрыта*: {0}\n👤 *Закрыл*: {1}', github.event.issue.title, github.event.issue.user.login) || '' }}
-            
-            ${{ github.event_name == 'pull_request' && github.event.action == 'opened' && format('🔀 *Новый Pull Request*: {0}\n👤 *Автор*: {1}\n🔗 *Ссылка*: {2}', github.event.pull_request.title, github.event.pull_request.user.login, github.event.pull_request.html_url) || '' }}
-            
-            ${{ github.event_name == 'pull_request' && github.event.action == 'ready_for_review' && format('👀 *PR готов к проверке*: {0}\n👤 *Автор*: {1}', github.event.pull_request.title, github.event.pull_request.user.login) || '' }}
-            
-            ${{ (github.event_name != 'issues' && github.event_name != 'pull_request') && format('ℹ️ *Событие*: {0} - {1}', github.event_name, github.event.action) || '' }}
-          format: "html"
+          # Проверяем тип события и формируем сообщение
+          if [ "$EVENT_TYPE" = "issues" ] && [ "$ACTION_TYPE" = "opened" ]; then
+            MESSAGE="${MESSAGE}📝 *Новая задача*%0A"
+            MESSAGE="${MESSAGE}Заголовок: ${{ github.event.issue.title }}%0A"
+            MESSAGE="${MESSAGE}Автор: ${{ github.event.issue.user.login }}%0A"
+            MESSAGE="${MESSAGE}Ссылка: ${{ github.event.issue.html_url }}"
+          elif [ "$EVENT_TYPE" = "issues" ] && [ "$ACTION_TYPE" = "closed" ]; then
+            MESSAGE="${MESSAGE}✅ *Задача закрыта*%0A"
+            MESSAGE="${MESSAGE}Заголовок: ${{ github.event.issue.title }}%0A"
+            MESSAGE="${MESSAGE}Автор: ${{ github.event.issue.user.login }}"
+          elif [ "$EVENT_TYPE" = "pull_request" ] && [ "$ACTION_TYPE" = "opened" ]; then
+            MESSAGE="${MESSAGE}🔀 *Новый PR*%0A"
+            MESSAGE="${MESSAGE}Заголовок: ${{ github.event.pull_request.title }}%0A"
+            MESSAGE="${MESSAGE}Автор: ${{ github.event.pull_request.user.login }}%0A"
+            MESSAGE="${MESSAGE}Ссылка: ${{ github.event.pull_request.html_url }}"
+          elif [ "$EVENT_TYPE" = "pull_request" ] && [ "$ACTION_TYPE" = "ready_for_review" ]; then
+            MESSAGE="${MESSAGE}👀 *PR готов к проверке*%0A"
+            MESSAGE="${MESSAGE}Заголовок: ${{ github.event.pull_request.title }}%0A"
+            MESSAGE="${MESSAGE}Автор: ${{ github.event.pull_request.user.login }}"
+          else
+            MESSAGE="${MESSAGE}ℹ️ *Событие в проекте*%0A"
+            MESSAGE="${MESSAGE}Тип: $EVENT_TYPE%0A"
+            MESSAGE="${MESSAGE}Действие: $ACTION_TYPE"
+          fi
+          
+          echo "Отправляем сообщение в Telegram..."
+          echo "Текст: $MESSAGE"
+          
+          # Отправляем в Telegram
+          curl -s -X POST "https://api.telegram.org/bot${{ secrets.TELEGRAM_BOT_TOKEN }}/sendMessage" \
+            -d "chat_id=${{ secrets.TELEGRAM_CHAT_ID }}" \
+            -d "message_thread_id=2" \
+            -d "text=$MESSAGE" \
+            -d "parse_mode=Markdown"
